Update Readme again
Some info on how to run the project / a ToC